--- a/hello.html
+++ b/hello.html
@@ -7,5 +7,13 @@
 </head>
 <body>
    <h1> 백엔드 서버 개발하기 시작</h1>
+   <dl>
+    <dt> 개발자 : </dt>
+        <dd> 호랑이</dd>
+        <dd> 고양이</dd>
+        <dd> 사자</dd>
+
+
+   </dl>
 </body>
 </html>
