dev2 계정에서 프론트엔드 작업시작1일차

--- a/hello.html
+++ b/hello.html
@@ -12,8 +12,12 @@
         <dd> 호랑이</dd>
         <dd> 고양이</dd>
         <dd> 사자</dd>
-
-
    </dl>
+   <p>
+    <strong>hello spring </strong> 프로젝트 시작
+</p>
+<p>
+    프론트엔드 작업시작 1일차
+</p>
 </body>
 </html>
